--- a/app/views/front.html
+++ b/app/views/front.html
@@ -4,11 +4,24 @@
 {% block content %}
 <div class="pure-u-1">
 	<div id="threads">
-{% for i in [1,2,3,4,5,6,7,8,9,10,11,12] %}
 		<article class="post">
-			<a href="#" style="height: 240px;"><img src="http://idioticphotos.com/images/1356279467.68.jpg"></a>
+			<a href="#"><img src="http://davidwalsh.name/demo/Wookmark-jQuery/example/images/image_1.jpg" width="200" height="283"></a>
 		</article>
-{% endfor %}
+		<article class="post">
+			<a href="#"><img src="http://davidwalsh.name/demo/Wookmark-jQuery/example/images/image_2.jpg" width="200" height="300"></a>
+		</article>
+		<article class="post">
+			<a href="#"><img src="http://davidwalsh.name/demo/Wookmark-jQuery/example/images/image_3.jpg" width="200" height="252"></a>
+		</article>
+		<article class="post">
+			<a href="#"><img src="http://davidwalsh.name/demo/Wookmark-jQuery/example/images/image_4.jpg" width="200" height="158"></a>
+		</article>
+		<article class="post">
+			<a href="#"><img src="http://davidwalsh.name/demo/Wookmark-jQuery/example/images/image_5.jpg" width="200" height="300"></a>
+		</article>
+		<article class="post">
+			<a href="#"><img src="http://davidwalsh.name/demo/Wookmark-jQuery/example/images/image_6.jpg" width="200" height="297"></a>
+		</article>
 	</ul>
 </div>
 {% endblock %}
