--- a/app/views/base.html
+++ b/app/views/base.html
@@ -24,7 +24,7 @@
 			<a href="/" class="pure-menu-heading">Idioticphotos</a>
 			<ul role="navigation">
 				<li class="pure-menu-selected"><a href="/">Home</a></li>
-				<li><a href="/login">Login</a></li>
+				<li><a href="/auth/login">Login</a></li>
 				{% if user %}
 				{% endif %}
 			</ul>
