--- a/app/views/auth/login.html
+++ b/app/views/auth/login.html
@@ -3,15 +3,15 @@
 {% set stylesheets = ["front.css"] %}
 {% block content %}
 <div class="pure-u-1">
-	<form id="login-form" class="pure-form pure-form-stacked">
+	<form id="login-form" class="pure-form pure-form-stacked" method="post">
 		<fieldset>
 			<legend>Log in</legend>
 			
 			<label for="username">Username</label>
-			<input id="username" type="text" placeholder="Username">
+			<input id="username" name="username" type="text" placeholder="Username">
 			
 			<label for="password">Password</label>
-			<input id="password" type="password" placeholder="Password">
+			<input id="password" name="password" type="password" placeholder="Password">
 			
 			<label for="remember" class="pure-checkbox">
 				<input id="remember" type="checkbox"> Remember me
