--- a/public/assets/stylesheets/site.css
+++ b/public/assets/stylesheets/site.css
@@ -1,12 +1,15 @@
+body {
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-webkit-text-size-adjust: 100%;
+}
 body,
 .pure-g [class *= "pure-u"],
 .pure-g-r [class *= "pure-u"] {
 	font-family: 'Lato', Arial, Verdana, 'Helvetica Neue', Helvetica, sans-serif;
 }
-body {
-	text-rendering: optimizeLegibility;
-	-webkit-font-smoothing: antialiased;
-	-webkit-text-size-adjust: 100%;
+input, .pure-button {
+    font-family: inherit;
 }
 #top .pure-menu {
 	background: #222;
