--- a/app/views/base.html
+++ b/app/views/base.html
@@ -35,13 +35,13 @@
 			<div id="content">
 {% block content %}{% endblock %}
 			</div>
-		</div>
-		<footer id="footer">
-			<div class="pure-u-1">
-				<p>Idioticphotos &copy; {{ year|date('Y') }}</p>
-			</div>
-		</footer>
+		</main>
 	</div>
+	<footer id="footer" class="pure-g-r">
+		<div class="pure-u-2-5">
+			<p>Idioticphotos &copy; {{ year|date('Y') }}</p>
+		</div>
+	</footer>
 </div>
 <!-- Dependencies -->
 <script src="/assets/javascripts/masonry.min.js"></script>
