--- a/app/views/base.html
+++ b/app/views/base.html
@@ -24,9 +24,11 @@
 			<a href="/" class="pure-menu-heading">Idioticphotos</a>
 			<ul role="navigation">
 				<li class="pure-menu-selected"><a href="/">Home</a></li>
-				<li><a href="/auth/login">Login</a></li>
-				{% if user %}
-				{% endif %}
+{% if user %}
+				<li><a href="/auth/logout">Log out</a></li>
+{% else %}
+				<li><a href="/auth/login">Log in</a></li>
+{% endif %}
 			</ul>
 		</div>
 	</header>
