--- a/app/views/base.html
+++ b/app/views/base.html
@@ -49,9 +49,10 @@
 <script src="/assets/javascripts/masonry.min.js"></script>
 <!-- Site-specific -->
 <script src="/assets/javascripts/ID.js"></script>
+<script src="/assets/javascripts/API.js"></script>
 <script src="/assets/javascripts/bootstrap.js"></script>
 {% for script in scripts %}
-	<script src="/assets/javascripts/{{ script }}"></script>
+	<script src="/assets/javascripts/pages/{{ script }}"></script>
 {% endfor %}
 </script>
 </body>
