--- a/public/assets/stylesheets/site.css
+++ b/public/assets/stylesheets/site.css
@@ -71,6 +71,11 @@ input, .pure-button {
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 }
+.post-image {
+	float: left;
+	margin: 0 10px 0 0;
+	vertical-align: middle;
+}
 footer {
 	margin-top: 50px;
 }
