New thread and reply

--- a/app/views/base.html
+++ b/app/views/base.html
@@ -52,7 +52,7 @@
 <script src="/assets/javascripts/API.js"></script>
 <script src="/assets/javascripts/bootstrap.js"></script>
 {% for script in scripts %}
-	<script src="/assets/javascripts/pages/{{ script }}"></script>
+<script src="/assets/javascripts/{{ script }}"></script>
 {% endfor %}
 </script>
 </body>
