--- a/app/views/front.html
+++ b/app/views/front.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% set scripts = ["front.js"] %}
+{% set scripts = ["pages/front.js", "api/thread.js"] %}
 {% set stylesheets = ["front.css"] %}
 {% block content %}
 <div class="pure-u-1">
