--- a/app/views/thread/thread.html
+++ b/app/views/thread/thread.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% set scripts = ["thread.js"] %}
+{% set scripts = [] %}
 {% block content %}
 <div class="pure-u-1">
 	<article id="thread">
@@ -13,8 +13,7 @@
 {% for post in posts %}
 	<article class="post">
 			<header>
-				<h2 class="post-title">{{ post.title }}</h1>
-				<h3><span class="posted-by"><a href="/user/{{ slug(post.username) }}">{{ post.username }}</a></span> wrote {{ post.ago }}</h3>
+				<h4><span class="posted-by"><a href="/user/{{ slug(post.username) }}">{{ post.username }}</a></span> wrote {{ post.ago }}</h4>
 			</header>
 {% if post.file %}
 			<img src="{{ post.file }}" width="{{ post.width }}" height="{{ post.height }}">
@@ -23,12 +22,12 @@
 	</article>
 {% endfor %}
 {% if user %}
-<form class="pure-form pure-form-stacked">
+<form method="post" action="/thread/reply" enctype="multipart/form-data" class="pure-form pure-form-stacked">
 	<fieldset>
 		<legend>New post</legend>
 
 		<label for="image">Image</label>
-		<input id="image" type="file" placeholder="Image">
+		<input id="image" name="image" type="file" placeholder="Image">
 
 		<label for="post-content">Content</label>
 		<textarea id="post-content" type="text" placeholder="Content" rows="5" cols="30"></textarea>
